# ProjetoFinalDeProgramaParalela

./: CMakeLists.txt  LOAD  Makefile  README.md  SERIAL  STACK  makefile  run.py  run.sh
input/: mr_5.clq  mr_6.clq
paralelo/dfs/: ThreadPool.cpp  bitmap.h
paralelo/load/: LOAD.cpp  ThreadPool.cpp  ThreadPool.h
paralelo/stack/: STACK.cpp  ThreadPool.cpp  ThreadPool.h
parallel/: SLBBPLEX  SLBBPLEX-PQ  SLBBPLEX-PQ.cpp  SLBBPLEX.cpp  ThreadPool.cpp  ThreadPool.h  fibonacci.hpp  history  makefile  output  output.debug  output.txt  output]  run-me.sh  saida
parallel/pool/: makefile  pool.cpp  thread
parallel/pool/linux_thread/headers/: multithread.h  taskqueue.h  threadpool.h
parallel/pool/linux_thread/sources/: taskqueue.cpp  threadpool.cpp
sequencial/: SERIAL.cpp  analysis.txt
serial/: SLBBPLEX  SLBBPLEX.cpp  makefile
